<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".Haupt">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#fff"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="3dp"
                android:elevation="3dp"
                android:layout_marginTop="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:text="@string/ergebnis"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/ergebnisEt"
                        android:hint="@string/hier_steht_gleich_dein_ergebnis"
                        android:autoLink="all"
                        android:background="@null"
                        android:padding="5dp"
                        android:textColor="#000"
                        android:layout_marginTop="15dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="true"
                        android:inputType="text" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#fff"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="3dp"
                android:elevation="3dp"
                android:layout_marginTop="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    tools:ignore="UseCompoundDrawables">
                    <TextView
                        android:text="@string/bild_vorschau"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/bildVorschau"
                        android:layout_marginTop="10dp"
                        android:maxHeight="250dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/bild_vorschau" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/anzeigen"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/anzeigen"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="100dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="#fff"
                android:visibility="gone"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/loeschen"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/l_schen"
                    android:textAllCaps="false"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="100dp"
                    android:layout_marginStart="70dp"
                    android:textSize="18sp"
                    android:textColor="#fff"/>

                <Button
                    android:id="@+id/speichern"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_height="35dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="100dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/bez_speichern"
                    android:layout_marginEnd="70dp"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#fff"/>

    <ImageButton
        android:id="@+id/neuButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:backgroundTint="#2D2F31"
        android:clickable="true"
        android:contentDescription="@string/neu"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/neu" />

    <ImageButton
        android:id="@+id/neuClicked"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitXY"
        android:background="@null"
        android:src="@drawable/neuc"
        android:visibility="gone"
        android:contentDescription="@string/neu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        >
        <ImageButton
            android:id="@+id/aufgabeButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="9dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitXY"
            android:background="@null"
            app:srcCompat="@drawable/aufgabe"
            android:contentDescription="@string/aufgabe" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitXY"
        android:background="@null"
        app:srcCompat="@drawable/home"
        android:contentDescription="@string/home" />
</RelativeLayout>